# kubernetes-examples

./: README.md
adminer/: README.md  adminer-deployment.yaml  adminer-service.yaml
cassandra/: README.md  cassandra-service.yaml  cassandra-statefulset.yaml
efk/: README.md
efk/development/: es-deployment.yaml  es-pvc.yaml  es-service.yaml  fluentd-daemonset.yaml  kibana-deployment.yaml  kibana-service.yaml
efk/production/: es-client-pdb.yaml  es-client-service.yaml  es-client-statefulset.yaml  es-curator-move-index-configmap.yaml  es-curator-move-index-cronjob.yaml  es-curator-new-index-configmap.yaml  es-curator-new-index-cronjob.yaml  es-data-hot-pdb.yaml  es-data-hot-service.yaml  es-data-hot-statefulset.yaml  es-data-warm-pdb.yaml  es-data-warm-service.yaml  es-data-warm-statefulset.yaml  es-master-pdb.yaml  es-master-service.yaml  es-master-statefulset.yaml  fluentd-daemonset.yaml  kibana-deployment.yaml  kibana-pdb.yaml  kibana-service.yaml
jaeger/: README.md
jaeger/development/: jaeger-agent-service.yaml  jaeger-collector-service.yaml  jaeger-deployment.yaml  jaeger-query-service.yaml  zipkin-service.yaml
jaeger/production/: BUILD.bazel  cassandra-pdb.yaml  cassandra-schema-job.yaml  cassandra-statefulset.yaml  jaeger-collector-deployment.yaml  jaeger-collector-pdb.yaml  jaeger-collector-service.yaml  jaeger-query-deployment.yaml  jaeger-query-pdb.yaml  jaeger-query-service.yaml  zipkin-service.yaml
kafka/: README.md  kafka-pdb.yaml  kafka-service.yaml  kafka-statefulset.yaml
mysql/: README.md  mysql-deployment.yaml  mysql-pvc.yaml  mysql-service.yaml
phpmyadmin/: README.md  pma-deployment.yaml  pma-service.yaml
postgres/: README.md  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml
rabbitmq/: README.md  management-service.yaml  rabbitmq-pdb.yaml  rabbitmq-service.yaml  rabbitmq-statefulset.yaml
zookeeper/: README.md  zookeeper-pdb.yaml  zookeeper-service.yaml  zookeeper-statefulset.yaml
